# clawing

./: .gitignore  LICENSE  README.md  SKILL.md
contracts/: foundry.toml
contracts/script/: Deploy.s.sol
contracts/src/: CLAW_Token.sol  MinterProxy.sol  OracleVerifier.sol  PoAIWMint.sol
contracts/test/: Adversarial.t.sol  PoAIWMint.t.sol
deploy/: deploy-mainnet.sh  deploy-sepolia.sh  genesis-mine.sh  monitor.sh  nginx-oracle.conf
docs/: 01-architecture.md  02-tlsnotary-integration.md  03-mining-client-flow.md  04-deployment-ops.md  CNAME  LAUNCH_ANNOUNCEMENT.md  MAINNET_DEPLOYMENT_CHECKLIST.md  MINING_GUIDE.md  OPS_RUNBOOK.md  ORACLE_ARCHITECTURE.md  SEPOLIA_DEPLOYMENT_GUIDE.md  VPS_DEPLOYMENT.md  community.html  index.html  main.js  poaiw.html  roadmap.html  robots.txt  sitemap.xml  style.css  tokenomics.html  whitepaper.html
e2e/: package-lock.json  package.json  tsconfig.json  vitest.config.ts
e2e/src/: anvil.ts  contracts.ts  deploy.ts  oracle-process.ts  state.ts  test-miner.ts  utils.ts
e2e/test/: e2e.test.ts  error-paths.test.ts  happy-path.test.ts  multi-miner.test.ts  setup.ts
gitbook/: README.md  SUMMARY.md
gitbook/community/: contributing.md  faq.md  (+1 more)
miner/: .env.example  .env.mainnet.example  .env.mainnet.template  package-lock.json
oracle/: .dockerignore  .env.example  .env.mainnet.example  .env.mainnet.template  Dockerfile  docker-compose.yml  package-lock.json  package.json
sp1-circuit/: Cargo.toml
sp1-circuit/host/: Cargo.toml
sp1-circuit/host/src/: main.rs
sp1-circuit/program/: Cargo.toml
sp1-circuit/program/src/: main.rs
(+38 files in other folders)
