[workspace]
members = ["program", "host"]
resolver = "2"

[workspace.dependencies]
# SP1 SDK
sp1-sdk = "4.0"
sp1-zkvm = "4.0"
sp1-helper = "4.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography
sha2 = "0.10"
tiny-keccak = { version = "2.0", features = ["keccak"] }

# Ethereum ABI encoding
alloy-sol-types = "0.8"
alloy-primitives = "0.8"

# TLSNotary related
tlsn-core = "0.1"
