[package]
name = "openclaw-host"
version = "0.1.0"
edition = "2021"

[dependencies]
sp1-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
alloy-sol-types = { workspace = true }
alloy-primitives = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
eyre = "0.6"
hex = "0.4"
